--- a/style.css
+++ b/style.css
@@ -171,8 +171,8 @@ body {
 }
 
 #button:hover {
-    background: #b59e25;
     cursor: pointer;
+    box-shadow: 0 14px 28px #1e669ae6, 0 10px 10px #eade9d;
 }
 
 #bot {
@@ -654,11 +654,12 @@ body {
     height: 512px;
     position: absolute;
     top: 1652px;
+    display: flex;
 }
 
 #connect {
     width: 960px;
-    float: right;
+    margin-left: 960px;
 }
 
 #part3 {
@@ -711,13 +712,139 @@ body {
 
 #opis {
     font-family: 'Lato', sans-serif;
-    font-size: 15px;
+    font-size: 14px;
     color: #333333;
     opacity: 0.7;
     letter-spacing: 1px;
-    line-height: 28px;
+    margin: 0 0 0 43px;
+}
+
+#icon2 {
+    float: left;
+    margin-right: 13px;
 }
 
 #op {
-    height: 65px;
+    margin-bottom: 10px;
+    height: 45px;
+}
+
+.gift {
+    width: 1920px;
+    height: 408px;
+    position: absolute;
+    top: 4134px;
+    background-image: url('images/morgan.jpg');
+}
+
+#bg_gift {
+    width: 1920px;
+    height: 408px; 
+    background: linear-gradient(180deg, rgba(30, 102, 154, 0.9) 0%, rgba(10, 65, 104, 0.9) 100%);
+}
+
+#get {
+    width: 1420px;
+    height: 178px;
+    position: absolute;
+    top: 120px;
+    left:250px;
+}
+
+#h_gift {
+    width: 939.50px;
+    height: 178px;
+}
+
+#g_first {
+    width: 460px;
+    height: 168px;
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 32px;
+    line-height: 42px;
+    letter-spacing: -0.5px;
+    color: #FFFFFF;
+    float: left;
+    margin: 0;
+}
+
+#g_second {
+    width: 460px;
+    height: 168px;
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    color: #FFFFFF;
+    margin: 0 0 0 460px;
+    line-height: 27px;
+}
+
+#g_but {
+    width: 340px;
+    height: 166px;
+    position: absolute;
+    top: 130px;
+    left: 1330px;
+}
+
+#g_but_img1 {
+    position: absolute;
+    top: -20px;
+    left: -30px;
+}
+
+#g_but p {
+    position: absolute;
+    top:86px;
+    left: 0;
+    font-family: 'Lato', sans-serif;
+    font-size: 14px;
+    color: #FFFFFF;
+    line-height: 26px;
+}
+
+#line9 {
+    position: absolute;
+    left: 250px;
+    top: 0;
+    width: 2px;
+    height: 408px;
+    opacity: 0.1;
+    background-color: white;
+}
+
+#line10 {
+    position: absolute;
+    left: 730px;
+    top: 0;
+    width: 2px;
+    height: 408px;
+    opacity: 0.1;
+    background-color: white;
+}
+
+#line11 {
+    position: absolute;
+    left: 1210px;
+    top: 0;
+    width: 2px;
+    height: 408px;
+    opacity: 0.1;
+    background-color: white;
+}
+
+#line12 {
+    position: absolute;
+    left: 1670px;
+    top: 0;
+    width: 2px;
+    height: 408px;
+    opacity: 0.1;
+    background-color: white;
+}
+
+.team {
+    width: 1920px;
+    height: 683px;
+    position: absolute;
+    top: 4542px;
 }
