--- a/style.css
+++ b/style.css
@@ -856,3 +856,48 @@ body {
     top:100px;
     left: 970px;
 }
+
+#tag {
+    width: 16px;
+    height: 364px;
+    position: absolute;
+    top: 219px;
+    left: 242px;
+}
+
+#team_first {
+    width: 700px;
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 31px;
+    line-height: 42px;
+    letter-spacing: -0.5px;
+}
+
+#team_second {
+    width: 700px;
+    font-family: 'Lato', sans-serif;
+    font-size: 14px;
+}
+
+#docs {
+    width: 701px;
+    height: 185px;
+    position: absolute;
+    top: 398px;
+    left: 970px;
+    display: flex;
+}
+
+#doc1 {
+    width: 132px;
+    height: 185px;
+    margin-right: 10px;
+}
+
+#doc1 img{
+    width: 132px;  
+}
+
+#arrow1 {
+    
+}
